--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -5,7 +5,7 @@ django-cors-headers~=3.0.2
 djangorestframework~=3.9.3
 django-celery-email~=2.0.2
 httpretty~=0.9.0
-mysqlclient~=1.4.0
+psycopg2~=2.8.4
 psl-dns~=1.0rc2
 requests~=2.21.0
 uwsgi~=2.0.0
